Updated translation form and minor code fixes

--- a/frontend/langforge/package.json
+++ b/frontend/langforge/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.9",
+    "@heroicons/react": "^2.1.5",
     "axios": "^1.7.7",
     "next": "14.2.14",
     "react": "^18",
